force-app/main/default/objects/awduplicate2__awDCJob__c/awduplicate2__awDCJob__c.object-meta.xml
<CustomObject>
    <label>Duplicate Check Job</label>
    <nameField>
        <label>Duplicate Check Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Check Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>