force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__ApexJobId__c</fullName>
    <label>Apex Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>