force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__ApexMergeJobId__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__ApexMergeJobId__c</fullName>
    <label>Apex Merge Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>