force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__Cron__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Cron__c</fullName>
    <label>Cron</label>
    <length>255</length>
    <type>Text</type>
</CustomField>