force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__DeduplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__DeduplicationMethod__c</fullName>
    <label>Deduplication Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Dedup</fullName>
            </value>
            <value>
                <fullName>Dedup 50</fullName>
                <default>true</default>
                <label>Dedup 50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>