force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__DeduplicationType__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__DeduplicationType__c</fullName>
    <label>Deduplication Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Object</fullName>
            </value>
            <value>
                <fullName>Cross Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>