force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__DuplicateCount__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__DuplicateCount__c</fullName>
    <label>Duplicate Count</label>
    <summarizedField>awduplicate2__awDCBatchDuplicate__c.awduplicate2__Number__c</summarizedField>
    <summaryFilterItems>
        <field>awduplicate2__awDCBatchDuplicate__c.awduplicate2__Handled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>awduplicate2__awDCBatchDuplicate__c.awduplicate2__DuplicateCheckJob__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>