force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__MatchObject__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__MatchObject__c</fullName>
    <label>Match Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>