force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__Object__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Object__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>