force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__Scheduled__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>