force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__Start__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Start__c</fullName>
    <label>Started</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>