force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__Threshold__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Threshold__c</fullName>
    <label>Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>