force-app/main/default/objects/awduplicate2__awDCJob__c/fields/awduplicate2__Type__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>